--- a/HEAPUtil_Demo.ipynb
+++ b/HEAPUtil_Demo.ipynb
@@ -32,7 +32,7 @@
         "id": "rBnbwTjJ9ppc"
       },
       "source": [
-        "Please add the provided Berlin Dataset Google Drive folder as a shortcut to your Google Drive and mount it to this Colab notebook. \n",
+        "Please add the provided Berlin Dataset folder to your Google Drive and mount it to this Colab notebook. \n",
         "\n",
         "Furthermore, change the paths for the below executables accordingly.\n",
         "\n",
